[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Characters/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Art/hand.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Characters/Enemies/ShadowHand.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Characters/Enemies/ShadowHandStates.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 48.0

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 192, 192 )

[sub_resource type="CircleShape2D" id=3]
radius = 2500.0

[sub_resource type="Curve" id=2]
min_value = 1.0
max_value = 4.0
_data = [ Vector2( 0, 4 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="ShadowHand" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="ShadowHandStates" type="Node" parent="." index="0"]
script = ExtResource( 4 )

[node name="Sprite" parent="." index="1"]
modulate = Color( 1, 1, 1, 1 )
position = Vector2( 0, 0 )
texture = ExtResource( 2 )
offset = Vector2( 90, 0 )

[node name="Hitbox" type="Area2D" parent="Sprite" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox" index="0"]
position = Vector2( 80, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2D" parent="." index="2"]
visible = false
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="Sight" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight" index="0"]
shape = SubResource( 3 )

[node name="SightRay" type="RayCast2D" parent="." index="4"]
collision_mask = 3

[node name="N" type="Node" parent="." index="5"]

[node name="Arm" type="Line2D" parent="N" index="0"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 34.0
width_curve = SubResource( 2 )
default_color = Color( 0, 0, 0, 1 )

[node name="RetreatTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="Label" type="Label" parent="." index="7"]
visible = false
margin_top = -288.0
margin_bottom = -258.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 5, 5 )
size_flags_horizontal = 4
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Sprite/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="RetreatTimer" to="." method="_on_RetreatTimer_timeout"]
